[project]
name = "livekit-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "tzdata>=2024.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/livekit_voice_agent"]
